<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Categorii.Entertainment">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:orientation="vertical"
                android:padding="10dp"
                android:scrollbars="vertical">

                <ImageView
                    android:id="@+id/entertain_function1"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/photo4"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:background="#73151515"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/entertain_function1"
                    android:paddingBottom="15dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="Entertainment"
                    android:textColor="#fff"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/entertain_function1"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/la_scoaterea_castilor_volumul_pentru_media_sa_fie_redus_la_zero"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/card1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/entertain_function2"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/photo4"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:background="#73151515"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/entertain_function2"
                    android:paddingBottom="15dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="Entertainment"
                    android:textColor="#fff"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/entertain_function2"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="Sa fiu anuntat cand Statia Spatiala Internationala trece deasupra mea"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/card1"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/entertain_function3"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/photo4"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:background="#73151515"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/entertain_function3"
                    android:paddingBottom="15dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="Entertainment"
                    android:textColor="#fff"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/entertain_function3"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/sa_se_deschida_youtube_cand_castile_sunt_conectate_la_telefon"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/card1"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/entertain_function4"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/photo4"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:background="#73151515"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/entertain_function4"
                    android:paddingBottom="15dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="Entertainment"
                    android:textColor="#fff"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/entertain_function4"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/seteaza_o_noua_imagine_de_background_pentru_pagina_de_pornire"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/card1"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/entertain_function5"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/photo4"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:background="#73151515"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/entertain_function5"
                    android:paddingBottom="15dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="Entertainment"
                    android:textColor="#fff"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/entertain_function5"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/cand_e_timpul_pentru_somnic_telefonul_sa_treaca_in_modul_silentios"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

        </TableLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>